left click to shoot